--- a/css/style.css
+++ b/css/style.css
@@ -242,3 +242,15 @@ a {
   border-radius: 10px;
   background-color: #dc0000;
 }
+
+.button {
+  border: 0;
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: #dc0000;
+}
