--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -161,6 +161,24 @@ a{
 	}
 }
 
+.main {
+
+	&__button {
+	}
+}
+.content {
+}
+.button {
+		border: 0;
+    line-height: 2.5;
+    padding: 0 20px;
+    font-size: 1rem;
+    text-align: center;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+    border-radius: 10px;
+    background-color: rgba(220, 0, 0, 1);
+}
 
 .footer {
 }
