--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -11,19 +11,15 @@ body {
 }
 
 //стили списка
-li	{
-	margin: 20px;
-}
-li:first-child{
-	margin: 0px 0px 0px 20px;
 
-}
-li:last-child{
-	margin: 0px;
+
+.headers{
+ font-size: 1.5em;
+ margin: 40px 0px 40px 0px;
 }
 
 //стрелочки в списке
-li:nth-child(1n+5)::after{
+.links__drop::after{
 	content: "";
 	width: 0;
 	height: 0;
@@ -32,19 +28,6 @@ li:nth-child(1n+5)::after{
 	border-top: 8px solid #030303;
 	margin: 0px 0px 0px 5px;
 	display: inline-block;
-	
-
-}
-
-li:nth-child(1n+14)::after{
-	content: "";
-	width: 0;
-	height: 0;
-	border-left: 0px solid transparent;
-	border-right: 0px solid transparent;
-	border-top: 0px solid #000000;
-	margin: 0px 0px 0px 0px;
-	display:inline-block;
 }
 
 //цвет ссылок
@@ -71,21 +54,21 @@ a{
 	background-color: #ffff;
 	flex: 1 1 auto;
 }
-.header__nav {
-	
-}
+
 
 .nav__links {
-			justify-content:space-between;
+			justify-content:space-around;
 			display: flex;
-		justify-content:center;
 		align-items: center;
-			padding: 10px 0px;
+			padding: 20px 0px;
 
 }
 .header__icon {
-	width: 60px; /* поддерживаются любые единицы, в том числе проценты */
-	margin: 0px auto;
+	width: 60px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 	background: #ffc200;
 	border-radius: 50%;
 }
@@ -96,17 +79,38 @@ a{
 		padding-top: 100%;
 }
 
-.link {
+nav ul ul {
+	display:none;
+	position:absolute;
 }
-.header__search {
-	padding: 15px 0px 0px 0px;
+
+nav ul li:hover > ul {
+	display: block;
 }
-.header__signup {
-	padding: 10px 0px 0px 0px;
+
+
+.links__drop:hover{
+	background-color: #f3ac16;
+}
+
+nav ul ul li {
+	min-width:170px;
+	display:list-item;
+	position:relative;
+	background-color: #fbf8f5;
+	display: block;
+	padding: 10px;
+	color: #ffffff;
+	background-color: #f3ac16;
+	z-index: 0;
+}
+
+nav ul li ul li:hover{
+	background-color: #c78b0a;
 }
 
 .main {
-
+	
 	&__discription {
 		text-align: center;
 
@@ -119,6 +123,7 @@ a{
 	}
 
 	&__undertext {
+		line-height: 1.3em;
 		font-size: 24px;
 		padding: 0px 20px 40px 20px;
 		margin: 0px 50px 0px 50px;
@@ -155,7 +160,7 @@ a{
 .container {
 	background: #fbf8f5;
 	margin: 0px auto;
-   width: 1500px;
+   max-width: 1500px;
 }
 
 
@@ -175,7 +180,7 @@ a{
 			border: 0;
 			line-height: 2.5;
 			padding: 15px 80px;
-			font-size: 2rem;
+			font-size: 1.5rem;
 			font-weight: 600;
 			text-transform: uppercase;
 			background-color: #f3ac16;
@@ -186,22 +191,35 @@ a{
 }
 
 .footer {
-	background-color: #fff;
+	justify-content:space-around;
+			display: flex;
+		align-items: center;
+			padding: 20px 0px;
 	height: 90px;
-
+	background-color: #fff;
 	&__links {
 		position: relative;
 		display: flex;
 		justify-content:center;
 		align-items: center;
-		margin: 0px auto;
-		padding: 10px 0px 0px 0px;
-
+		& li{
+			margin: 0px 0px 0px 20px;
+		}
 	}
 
+
 	&__link {
-		font-size: 2rem;
+
+		font-size: 1.5rem;
 		font-weight: 500;
 	}
 }
 
+.header__nav {
+
+}
+
+.link {
+	font-size: 1.4rem;
+
+}
