--- a/css/style.css
+++ b/css/style.css
@@ -96,19 +96,12 @@ body {
   background-color: #fbf8f5;
 }
 
-li {
-  margin: 20px;
+.headers {
+  font-size: 1.5em;
+  margin: 40px 0px 40px 0px;
 }
 
-li:first-child {
-  margin: 0px 0px 0px 20px;
-}
-
-li:last-child {
-  margin: 0px;
-}
-
-li:nth-child(1n+5)::after {
+.links__drop::after {
   content: "";
   width: 0;
   height: 0;
@@ -116,17 +109,6 @@ li:nth-child(1n+5)::after {
   border-right: 4px solid transparent;
   border-top: 8px solid #030303;
   margin: 0px 0px 0px 5px;
-  display: inline-block;
-}
-
-li:nth-child(1n+14)::after {
-  content: "";
-  width: 0;
-  height: 0;
-  border-left: 0px solid transparent;
-  border-right: 0px solid transparent;
-  border-top: 0px solid #000000;
-  margin: 0px 0px 0px 0px;
   display: inline-block;
 }
 
@@ -162,25 +144,32 @@ a {
 }
 
 .nav__links {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px 0px;
+}
+
+.header__icon {
+  width: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px 0px;
-}
-
-.header__icon {
-  width: 60px;
-  /* поддерживаются любые единицы, в том числе проценты */
-  margin: 0px auto;
   background: #ffc200;
   border-radius: 50%;
 }
@@ -192,12 +181,33 @@ a {
   padding-top: 100%;
 }
 
-.header__search {
-  padding: 15px 0px 0px 0px;
+nav ul ul {
+  display: none;
+  position: absolute;
 }
 
-.header__signup {
-  padding: 10px 0px 0px 0px;
+nav ul li:hover > ul {
+  display: block;
+}
+
+.links__drop:hover {
+  background-color: #f3ac16;
+}
+
+nav ul ul li {
+  min-width: 170px;
+  display: list-item;
+  position: relative;
+  background-color: #fbf8f5;
+  display: block;
+  padding: 10px;
+  color: #ffffff;
+  background-color: #f3ac16;
+  z-index: 0;
+}
+
+nav ul li ul li:hover {
+  background-color: #c78b0a;
 }
 
 .main__discription {
@@ -211,6 +221,7 @@ a {
 }
 
 .main__undertext {
+  line-height: 1.3em;
   font-size: 24px;
   padding: 0px 20px 40px 20px;
   margin: 0px 50px 0px 50px;
@@ -243,7 +254,7 @@ a {
 .container {
   background: #fbf8f5;
   margin: 0px auto;
-  width: 1500px;
+  max-width: 1500px;
 }
 
 .main__button {
@@ -257,7 +268,7 @@ a {
   border: 0;
   line-height: 2.5;
   padding: 15px 80px;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 600;
   text-transform: uppercase;
   background-color: #f3ac16;
@@ -267,8 +278,17 @@ a {
 }
 
 .footer {
-  background-color: #fff;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px 0px;
   height: 90px;
+  background-color: #fff;
 }
 
 .footer__links {
@@ -282,11 +302,17 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0px auto;
-  padding: 10px 0px 0px 0px;
+}
+
+.footer__links li {
+  margin: 0px 0px 0px 20px;
 }
 
 .footer__link {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 500;
+}
+
+.link {
+  font-size: 1.4rem;
 }
