--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -209,9 +209,9 @@ nav ul li ul li:hover{
 	width: 10px;
 }
 ::-webkit-scrollbar-track{
-	background-color: #c9c9c9;
+	background-color: #ebebeb;
 }
 ::-webkit-scrollbar-thumb{
-	background-color: #ffd905;
+	background-color: #f3ac16;
 	border-radius: 10px;
 }
