--- a/css/style.css
+++ b/css/style.css
@@ -319,10 +319,10 @@ nav ul li ul li:hover {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #c9c9c9;
+  background-color: #ebebeb;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #ffd905;
+  background-color: #f3ac16;
   border-radius: 10px;
 }
