--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -10,7 +10,6 @@ body {
 	background-color: #fbf8f5;
 }
 
-
 //header
 .headers{
  font-size: 1.5em;
@@ -33,6 +32,50 @@ body {
 	display: inline-block;
 }
 
+.hide__navigation{
+	width: 100%;
+	display: flex;
+	justify-content:space-evenly;
+	align-items: center;
+	margin: 0px auto;
+}
+
+.show__navigation{
+	display: none;
+}
+
+@media (max-width:1360px){
+	.hide__navigation {
+		display: none;
+	}
+	.show__navigation{
+		width: 100%;
+		display: flex;
+		justify-content:space-around;
+		align-items: center;
+		margin: 0px auto;
+	}
+	nav ul ul {
+		display:none;
+		position:absolute;
+	}
+	nav ul ul ul {
+		display:none;
+		position:absolute;
+		top: 0;
+		left: 100%;
+	}
+	nav ul li:hover > ul {
+		display: block;
+		
+	}
+	
+	.links__drop:hover{
+		background-color: #f3ac16;
+		border-radius: 0px 0px 0px 0px;
+	}
+}
+
 //list color
 a{
 	font-family: lato;
@@ -51,7 +94,6 @@ a{
 
 //width limit
 .content {
-	
 	max-width: 1500px;
 	margin: 1px auto;
 	background-color: #ffff;
@@ -60,10 +102,10 @@ a{
 
 //navigation and icon styling
 .nav__links {
-			justify-content:space-around;
-			display: flex;
-		align-items: center;
-			padding: 20px 0px;
+	position: relative;
+	display: flex;
+	align-items: center;
+	padding: 20px 20px;
 }
 .header__icon {
 	width: 60px;
@@ -93,19 +135,20 @@ nav ul li:hover > ul {
 
 .links__drop:hover{
 	background-color: #f3ac16;
-	border-radius: 5px;
+	border-radius: 5px 5px 0px 0px;
 }
 
 nav ul ul li {
 	min-width:170px;
-	display:list-item;
+	display:table;
 	position:relative;
-	background-color: #fbf8f5;
 	display: block;
 	padding: 10px;
-	color: #ffffff;
 	background-color: #f3ac16;
 	z-index: 0;
+	&:last-child{
+		border-radius: 0px 0px 20px 20px;
+	}
 }
 
 nav ul li ul li:hover{
