--- a/css/style.css
+++ b/css/style.css
@@ -91,18 +91,29 @@ h6 {
 }
 
 /*--------------------*/
+dl, ol, ul {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
 body {
   font-family: Lato;
   background-color: #fbf8f5;
 }
 
-.headers {
-  font-size: 1.5em;
-  margin: 40px 0px 40px 0px;
+a:hover {
+  text-decoration: none;
+  color: #000;
 }
 
-.header {
-  margin: 10px 0px 20px 0px;
+ul {
+  -webkit-padding-start: 0px;
+          padding-inline-start: 0px;
+}
+
+.headers {
+  font-size: 1.5em;
+  margin: 0px 0px 0px 0px;
 }
 
 .links__drop::after {
@@ -162,9 +173,9 @@ body {
   }
   nav ul li:hover > ul {
     display: block;
+    font-size: 13.5px;
   }
   .links__drop:hover {
-    background-color: #f3ac16;
     border-radius: 0px 0px 0px 0px;
   }
 }
@@ -244,26 +255,32 @@ nav ul li:hover > ul {
 }
 
 .links__drop:hover {
-  background-color: #f3ac16;
   border-radius: 5px 5px 0px 0px;
 }
 
 nav ul ul li {
   min-width: 170px;
-  display: table;
+  display: block;
   position: relative;
   display: block;
   padding: 10px;
-  background-color: #f3ac16;
-  z-index: 0;
+  background-color: #eeeeee;
+  border: 1px solid #eeeeee;
+  z-index: 1;
 }
 
 nav ul ul li:last-child {
   border-radius: 0px 0px 20px 20px;
 }
 
+nav ul ul li:nth-child(2n+1) {
+  background-color: #fafafa;
+  border: 1px solid #fafafa;
+}
+
 nav ul li ul li:hover {
-  background-color: #c78b0a;
+  background-color: #cacaca;
+  border: 1px solid #eeeeee;
 }
 
 .main__discription {
@@ -294,11 +311,20 @@ nav ul li ul li:hover {
 .main__gridpictures {
   display: -ms-grid;
   display: grid;
-  -webkit-column-gap: 80px;
-          column-gap: 80px;
+  -webkit-column-gap: 96px;
+          column-gap: 96px;
   row-gap: 50px;
-  -ms-grid-columns: (minmax(325px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
+  -ms-grid-columns: (minmax(325px, 2fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(325px, 2fr));
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: center;
 }
 
 .main__button {
@@ -329,12 +355,6 @@ nav ul li ul li:hover {
   width: 400px;
   height: 400px;
   background: #f3ac16;
-}
-
-.container {
-  background: #fbf8f5;
-  margin: 0px auto;
-  max-width: 1500px;
 }
 
 .button__change {
@@ -395,6 +415,6 @@ nav ul li ul li:hover {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #f3ac16;
+  background-color: #bebebe;
   border-radius: 10px;
 }
